crates/dsl-core/tests/snapshots/ast_golden__ast_deal_create.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "deal",
                verb: "create",
                arguments: [
                    Argument {
                        key: "client-name",
                        value: Literal(
                            String(
                                "Fidelity International",
                            ),
                            Span {
                                start: 26,
                                end: 50,
                            },
                        ),
                        span: Span {
                            start: 13,
                            end: 50,
                        },
                    },
                    Argument {
                        key: "product",
                        value: Literal(
                            String(
                                "custody",
                            ),
                            Span {
                                start: 60,
                                end: 69,
                            },
                        ),
                        span: Span {
                            start: 51,
                            end: 69,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "deal",
                ),
                span: Span {
                    start: 0,
                    end: 80,
                },
            },
        ),
    ],
}
